# gowithdev-rsapi

./: .env  CODE_OF_CONDUCT  Cargo.toml  Dockerfile  LICENSE  README.md  compose.yaml
.github/workflows/: docker-publish.yml
src/: main.rs  routes.rs
src/api/controllers/: posts.rs
src/api/services/: posts.rs
src/app/: middleware.rs  mod.rs  router.rs
src/app/auth/: model.rs
src/app/auth/login/: controller.rs  model.rs
src/app/common/: core.rs  errors.rs
src/app/orm/: mod.rs  post_categories.rs  post_comments.rs  post_tags.rs  posts.rs  tags.rs  users.rs
src/app/public/posts/: controller.rs  model.rs
src/app/secure/: mod.rs
src/app/secure/categories/: controller.rs
src/app/secure/media/: controller.rs  model.rs
src/app/secure/posts/: controller.rs  model.rs
src/app/secure/user/: controller.rs  model.rs
