[package]
name = "codejedi-rsapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = { version = "0.12", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
] }
axum = "0.7.5"
dotenvy = "0.15.7"
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full"] }
