[package]
name = "gowithdev-rsapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = { version = "1.1.1", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
] }
axum = { version = "0.7.7", features = ["macros", "json", "multipart"] }
dotenvy = "0.15.7"
serde_json = "1.0.1"
tokio = { version = "1.41.1", features = ["full"] }
serde = "1.0.214"
tower-http = { version = "0.6.1", features = ["cors", "trace", "fs"] }
bcrypt = "0.16.0"
jsonwebtoken = "9.3.0"
chrono = "0.4.38"
axum-extra = { version = "0.9.4", features = ["cookie"] }
time = "0.3.37"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.11.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
rust-s3 = "0.35.1"
